...
              _buildTabButton(
                context,
                ref,
                'assets/icon/userCircle.svg',
                3,
                currentIndex,
                'profile_tab',
              ),
            ],
          ),
        ),
      ),
    );
...
