...
            name: profile?.bestDisplayName,
            size: 20,
          ),
          const SizedBox(width: 4),
          Flexible(
            child: Text(
              profile?.bestDisplayName ?? 'Loading...',
              maxLines: 1,
              overflow: TextOverflow.ellipsis,
              style: VineTheme.bodyFont(
                fontSize: 12,
                fontWeight: FontWeight.w600,
              ),
...
            name: displayName ?? inspiredByNpub,
            size: 24,
          ),
          const SizedBox(width: 6),
          Expanded(
            child: Text(
              displayName ?? inspiredByNpub ?? 'Unknown',
              maxLines: 1,
              overflow: TextOverflow.ellipsis,
              style: VineTheme.bodyFont(
                fontSize: 13,
                fontWeight: FontWeight.w600,
              ),
...
