appId: co.openvine.app
env:
  DISPLAY_NAME: "AutomationUser"
  BIO: "AutomationUser bio"
  USERNAME: "Automation User"
---
#TC to browse the user profile,
# given the user is logged in in the app with existing keys,
# the profile navigation is verified
#Steps:
# 1. Tap on the profile icon: Validate profile page is displayed
# 2. Tap on Edit profile: Edit modal is displayed
# 3. Tap on anywhere on the screen: Validate modal is closed
# 4. Tap on Clips: Edit modal is displayed - Moved clips to the end since there's an issue and back arrow does not work
# 5. Tap on the back arrow: Profile screen is displayed
# 6. Tap on Share profile: OS modal is displayed
# 7. Tap on close: Profile screen is displayed

# 1. Tap on the profile icon: Validate profile page is displayed
- doubleTapOn:
    id: profile_tab
    delay: 100
- runFlow: ../asserts/assertProfile.yml
# 2. Tap on Edit profile: Edit modal is displayed
- tapOn: Edit Profile
- runFlow: ../asserts/assertEditProfileModal.yml

# 3. Tap on anywhere on the screen: Validate modal is closed
- tapOn:
    point: "50%, 50%" # Coordinates for the middle of the screen
- assertNotVisible: "Delete Account and Data"

#TO-DO: Once issue on the back button of clips is fixed, uncomment and re-arrange the following steps.
# 4. Tap on Clips: Edit modal is displayed
#- tapOn: Clips
#- runFlow: ../asserts/assertClipsScreen.yml

# 5. Tap on the back arrow: Profile screen is displayed
#- tapOn:
#    point: 1%,8%
#- assertVisible: Profile

# 6. Tap on Share profile: OS modal is displayed
- tapOn: Share Profile
- assertVisible: User on divine #To improve once tested on Android. For now it only validates the iOS menu

# 7. Tap on close: Profile screen is displayed
- tapOn:
    id: UICloseButtonBackground
- assertVisible: Refresh
